Makefile-based automation.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,6 @@
+[aliases]
+test = pytest
+
 [check]
 metadata = 1
 restructuredtext = 1
@@ -33,20 +36,18 @@ strict = 1
 ;sign = 1
 ;identity = ...
 
-[pytest]
+[tool:pytest]
 addopts =
+	-l -r fEsxw
 	--flakes
-	--spec
 	--cov-report term-missing
-	--cov-report html
 	--cov-report xml
 	--no-cov-on-fail
 	--cov htdsa
-	-l
 	--durations=5
-	-r fEsxw
 	--color=yes
-	test/
+	test
 
 [wheel]
 universal = 1
+
