--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,39 @@
-*.py[co]
+# Python Bytecode
+*.py[cod]
+
+# C Extensions
+*.so
+
+# Packaging
+*.egg-info
 .eggs
 .packaging
-*.egg-info
+
+# Virtual Environment Pseudo-Chroot
 bin
-lib
-usr
-var
 include
+lib
 share
 tmp
-coverage.xml
+usr
+var
+
+# Unit Test / Coverage Reports
+.cache
+.cagoule.db
 .coverage
 .tox
-.cagoule.db
-.cache/
-htmlcov/
+coverage.xml
+htmlcov
+
+# Translations
+*.mo
+*.pot
+
+# Mac
 .DS_Store
+
+# Completion Integration
 .ropeproject
+tags
+
